--- a/session7/example/package.json
+++ b/session7/example/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development --hot",
@@ -18,10 +19,10 @@
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
